// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PubmedDocTypesField component should render default view 1`] = `
<GenericSelectField
  error={false}
  errorText=""
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Addresses",
        "value": "Addresses",
      },
      Object {
        "text": "Autobiography",
        "value": "Autobiography",
      },
      Object {
        "text": "Bibliography",
        "value": "Bibliography",
      },
      Object {
        "text": "Biography",
        "value": "Biography",
      },
      Object {
        "text": "Case Reports",
        "value": "Case Reports",
      },
      Object {
        "text": "Clinical Conference",
        "value": "Clinical Conference",
      },
      Object {
        "text": "Clinical Study",
        "value": "Clinical Study",
      },
      Object {
        "text": "Clinical Trial",
        "value": "Clinical Trial",
      },
      Object {
        "text": "Clinical Trial, Phase I",
        "value": "Clinical Trial, Phase I",
      },
      Object {
        "text": "Clinical Trial, Phase II",
        "value": "Clinical Trial, Phase II",
      },
      Object {
        "text": "Clinical Trial, Phase III",
        "value": "Clinical Trial, Phase III",
      },
      Object {
        "text": "Clinical Trial, Phase IV",
        "value": "Clinical Trial, Phase IV",
      },
      Object {
        "text": "Comparative Study",
        "value": "Comparative Study",
      },
      Object {
        "text": "Congresses",
        "value": "Congresses",
      },
      Object {
        "text": "Consensus Development Conference",
        "value": "Consensus Development Conference",
      },
      Object {
        "text": "Consensus Development Conference, NIH",
        "value": "Consensus Development Conference, NIH",
      },
      Object {
        "text": "Controlled Clinical Trial",
        "value": "Controlled Clinical Trial",
      },
      Object {
        "text": "Dataset",
        "value": "Dataset",
      },
      Object {
        "text": "Editorial",
        "value": "Editorial",
      },
      Object {
        "text": "English Abstract",
        "value": "English Abstract",
      },
      Object {
        "text": "Evaluation Studies",
        "value": "Evaluation Studies",
      },
      Object {
        "text": "Guideline",
        "value": "Guideline",
      },
      Object {
        "text": "Historical Article",
        "value": "Historical Article",
      },
      Object {
        "text": "Interview",
        "value": "Interview",
      },
      Object {
        "text": "Introductory Journal Article",
        "value": "Introductory Journal Article",
      },
      Object {
        "text": "Journal Article",
        "value": "Journal Article",
      },
      Object {
        "text": "Lectures",
        "value": "Lectures",
      },
      Object {
        "text": "Legal Cases",
        "value": "Legal Cases",
      },
      Object {
        "text": "Letter",
        "value": "Letter",
      },
      Object {
        "text": "Meta-Analysis",
        "value": "Meta-Analysis",
      },
      Object {
        "text": "Multicenter Study",
        "value": "Multicenter Study",
      },
      Object {
        "text": "News",
        "value": "News",
      },
      Object {
        "text": "Observational Study",
        "value": "Observational Study",
      },
      Object {
        "text": "Patient Education Handout",
        "value": "Patient Education Handout",
      },
      Object {
        "text": "Personal Narratives",
        "value": "Personal Narratives",
      },
      Object {
        "text": "Portraits",
        "value": "Portraits",
      },
      Object {
        "text": "Practice Guideline",
        "value": "Practice Guideline",
      },
      Object {
        "text": "Pragmatic Clinical Trial",
        "value": "Pragmatic Clinical Trial",
      },
      Object {
        "text": "Published Erratum",
        "value": "Published Erratum",
      },
      Object {
        "text": "Randomized Controlled Trial",
        "value": "Randomized Controlled Trial",
      },
      Object {
        "text": "Review",
        "value": "Review",
      },
      Object {
        "text": "Twin Study",
        "value": "Twin Study",
      },
      Object {
        "text": "Validation Studies",
        "value": "Validation Studies",
      },
      Object {
        "text": "Video-Audio Media",
        "value": "Video-Audio Media",
      },
      Object {
        "text": "Webcasts",
        "value": "Webcasts",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  value={Array []}
/>
`;

exports[`PubmedDocTypesField component should render immutable list as selected value with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Immutable.List [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Addresses",
        "value": "Addresses",
      },
      Object {
        "text": "Autobiography",
        "value": "Autobiography",
      },
      Object {
        "text": "Bibliography",
        "value": "Bibliography",
      },
      Object {
        "text": "Biography",
        "value": "Biography",
      },
      Object {
        "text": "Case Reports",
        "value": "Case Reports",
      },
      Object {
        "text": "Clinical Conference",
        "value": "Clinical Conference",
      },
      Object {
        "text": "Clinical Study",
        "value": "Clinical Study",
      },
      Object {
        "text": "Clinical Trial",
        "value": "Clinical Trial",
      },
      Object {
        "text": "Clinical Trial, Phase I",
        "value": "Clinical Trial, Phase I",
      },
      Object {
        "text": "Clinical Trial, Phase II",
        "value": "Clinical Trial, Phase II",
      },
      Object {
        "text": "Clinical Trial, Phase III",
        "value": "Clinical Trial, Phase III",
      },
      Object {
        "text": "Clinical Trial, Phase IV",
        "value": "Clinical Trial, Phase IV",
      },
      Object {
        "text": "Comparative Study",
        "value": "Comparative Study",
      },
      Object {
        "text": "Congresses",
        "value": "Congresses",
      },
      Object {
        "text": "Consensus Development Conference",
        "value": "Consensus Development Conference",
      },
      Object {
        "text": "Consensus Development Conference, NIH",
        "value": "Consensus Development Conference, NIH",
      },
      Object {
        "text": "Controlled Clinical Trial",
        "value": "Controlled Clinical Trial",
      },
      Object {
        "text": "Dataset",
        "value": "Dataset",
      },
      Object {
        "text": "Editorial",
        "value": "Editorial",
      },
      Object {
        "text": "English Abstract",
        "value": "English Abstract",
      },
      Object {
        "text": "Evaluation Studies",
        "value": "Evaluation Studies",
      },
      Object {
        "text": "Guideline",
        "value": "Guideline",
      },
      Object {
        "text": "Historical Article",
        "value": "Historical Article",
      },
      Object {
        "text": "Interview",
        "value": "Interview",
      },
      Object {
        "text": "Introductory Journal Article",
        "value": "Introductory Journal Article",
      },
      Object {
        "text": "Journal Article",
        "value": "Journal Article",
      },
      Object {
        "text": "Lectures",
        "value": "Lectures",
      },
      Object {
        "text": "Legal Cases",
        "value": "Legal Cases",
      },
      Object {
        "text": "Letter",
        "value": "Letter",
      },
      Object {
        "text": "Meta-Analysis",
        "value": "Meta-Analysis",
      },
      Object {
        "text": "Multicenter Study",
        "value": "Multicenter Study",
      },
      Object {
        "text": "News",
        "value": "News",
      },
      Object {
        "text": "Observational Study",
        "value": "Observational Study",
      },
      Object {
        "text": "Patient Education Handout",
        "value": "Patient Education Handout",
      },
      Object {
        "text": "Personal Narratives",
        "value": "Personal Narratives",
      },
      Object {
        "text": "Portraits",
        "value": "Portraits",
      },
      Object {
        "text": "Practice Guideline",
        "value": "Practice Guideline",
      },
      Object {
        "text": "Pragmatic Clinical Trial",
        "value": "Pragmatic Clinical Trial",
      },
      Object {
        "text": "Published Erratum",
        "value": "Published Erratum",
      },
      Object {
        "text": "Randomized Controlled Trial",
        "value": "Randomized Controlled Trial",
      },
      Object {
        "text": "Review",
        "value": "Review",
      },
      Object {
        "text": "Twin Study",
        "value": "Twin Study",
      },
      Object {
        "text": "Validation Studies",
        "value": "Validation Studies",
      },
      Object {
        "text": "Video-Audio Media",
        "value": "Video-Audio Media",
      },
      Object {
        "text": "Webcasts",
        "value": "Webcasts",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`PubmedDocTypesField component should render when given a default value field props 1`] = `
<GenericSelectField
  defaultValue="afr"
  error={false}
  errorText=""
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Addresses",
        "value": "Addresses",
      },
      Object {
        "text": "Autobiography",
        "value": "Autobiography",
      },
      Object {
        "text": "Bibliography",
        "value": "Bibliography",
      },
      Object {
        "text": "Biography",
        "value": "Biography",
      },
      Object {
        "text": "Case Reports",
        "value": "Case Reports",
      },
      Object {
        "text": "Clinical Conference",
        "value": "Clinical Conference",
      },
      Object {
        "text": "Clinical Study",
        "value": "Clinical Study",
      },
      Object {
        "text": "Clinical Trial",
        "value": "Clinical Trial",
      },
      Object {
        "text": "Clinical Trial, Phase I",
        "value": "Clinical Trial, Phase I",
      },
      Object {
        "text": "Clinical Trial, Phase II",
        "value": "Clinical Trial, Phase II",
      },
      Object {
        "text": "Clinical Trial, Phase III",
        "value": "Clinical Trial, Phase III",
      },
      Object {
        "text": "Clinical Trial, Phase IV",
        "value": "Clinical Trial, Phase IV",
      },
      Object {
        "text": "Comparative Study",
        "value": "Comparative Study",
      },
      Object {
        "text": "Congresses",
        "value": "Congresses",
      },
      Object {
        "text": "Consensus Development Conference",
        "value": "Consensus Development Conference",
      },
      Object {
        "text": "Consensus Development Conference, NIH",
        "value": "Consensus Development Conference, NIH",
      },
      Object {
        "text": "Controlled Clinical Trial",
        "value": "Controlled Clinical Trial",
      },
      Object {
        "text": "Dataset",
        "value": "Dataset",
      },
      Object {
        "text": "Editorial",
        "value": "Editorial",
      },
      Object {
        "text": "English Abstract",
        "value": "English Abstract",
      },
      Object {
        "text": "Evaluation Studies",
        "value": "Evaluation Studies",
      },
      Object {
        "text": "Guideline",
        "value": "Guideline",
      },
      Object {
        "text": "Historical Article",
        "value": "Historical Article",
      },
      Object {
        "text": "Interview",
        "value": "Interview",
      },
      Object {
        "text": "Introductory Journal Article",
        "value": "Introductory Journal Article",
      },
      Object {
        "text": "Journal Article",
        "value": "Journal Article",
      },
      Object {
        "text": "Lectures",
        "value": "Lectures",
      },
      Object {
        "text": "Legal Cases",
        "value": "Legal Cases",
      },
      Object {
        "text": "Letter",
        "value": "Letter",
      },
      Object {
        "text": "Meta-Analysis",
        "value": "Meta-Analysis",
      },
      Object {
        "text": "Multicenter Study",
        "value": "Multicenter Study",
      },
      Object {
        "text": "News",
        "value": "News",
      },
      Object {
        "text": "Observational Study",
        "value": "Observational Study",
      },
      Object {
        "text": "Patient Education Handout",
        "value": "Patient Education Handout",
      },
      Object {
        "text": "Personal Narratives",
        "value": "Personal Narratives",
      },
      Object {
        "text": "Portraits",
        "value": "Portraits",
      },
      Object {
        "text": "Practice Guideline",
        "value": "Practice Guideline",
      },
      Object {
        "text": "Pragmatic Clinical Trial",
        "value": "Pragmatic Clinical Trial",
      },
      Object {
        "text": "Published Erratum",
        "value": "Published Erratum",
      },
      Object {
        "text": "Randomized Controlled Trial",
        "value": "Randomized Controlled Trial",
      },
      Object {
        "text": "Review",
        "value": "Review",
      },
      Object {
        "text": "Twin Study",
        "value": "Twin Study",
      },
      Object {
        "text": "Validation Studies",
        "value": "Validation Studies",
      },
      Object {
        "text": "Video-Audio Media",
        "value": "Video-Audio Media",
      },
      Object {
        "text": "Webcasts",
        "value": "Webcasts",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  placeholder="Test placeholder"
  value={
    Array [
      "afr",
    ]
  }
/>
`;

exports[`PubmedDocTypesField component should render with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Addresses",
        "value": "Addresses",
      },
      Object {
        "text": "Autobiography",
        "value": "Autobiography",
      },
      Object {
        "text": "Bibliography",
        "value": "Bibliography",
      },
      Object {
        "text": "Biography",
        "value": "Biography",
      },
      Object {
        "text": "Case Reports",
        "value": "Case Reports",
      },
      Object {
        "text": "Clinical Conference",
        "value": "Clinical Conference",
      },
      Object {
        "text": "Clinical Study",
        "value": "Clinical Study",
      },
      Object {
        "text": "Clinical Trial",
        "value": "Clinical Trial",
      },
      Object {
        "text": "Clinical Trial, Phase I",
        "value": "Clinical Trial, Phase I",
      },
      Object {
        "text": "Clinical Trial, Phase II",
        "value": "Clinical Trial, Phase II",
      },
      Object {
        "text": "Clinical Trial, Phase III",
        "value": "Clinical Trial, Phase III",
      },
      Object {
        "text": "Clinical Trial, Phase IV",
        "value": "Clinical Trial, Phase IV",
      },
      Object {
        "text": "Comparative Study",
        "value": "Comparative Study",
      },
      Object {
        "text": "Congresses",
        "value": "Congresses",
      },
      Object {
        "text": "Consensus Development Conference",
        "value": "Consensus Development Conference",
      },
      Object {
        "text": "Consensus Development Conference, NIH",
        "value": "Consensus Development Conference, NIH",
      },
      Object {
        "text": "Controlled Clinical Trial",
        "value": "Controlled Clinical Trial",
      },
      Object {
        "text": "Dataset",
        "value": "Dataset",
      },
      Object {
        "text": "Editorial",
        "value": "Editorial",
      },
      Object {
        "text": "English Abstract",
        "value": "English Abstract",
      },
      Object {
        "text": "Evaluation Studies",
        "value": "Evaluation Studies",
      },
      Object {
        "text": "Guideline",
        "value": "Guideline",
      },
      Object {
        "text": "Historical Article",
        "value": "Historical Article",
      },
      Object {
        "text": "Interview",
        "value": "Interview",
      },
      Object {
        "text": "Introductory Journal Article",
        "value": "Introductory Journal Article",
      },
      Object {
        "text": "Journal Article",
        "value": "Journal Article",
      },
      Object {
        "text": "Lectures",
        "value": "Lectures",
      },
      Object {
        "text": "Legal Cases",
        "value": "Legal Cases",
      },
      Object {
        "text": "Letter",
        "value": "Letter",
      },
      Object {
        "text": "Meta-Analysis",
        "value": "Meta-Analysis",
      },
      Object {
        "text": "Multicenter Study",
        "value": "Multicenter Study",
      },
      Object {
        "text": "News",
        "value": "News",
      },
      Object {
        "text": "Observational Study",
        "value": "Observational Study",
      },
      Object {
        "text": "Patient Education Handout",
        "value": "Patient Education Handout",
      },
      Object {
        "text": "Personal Narratives",
        "value": "Personal Narratives",
      },
      Object {
        "text": "Portraits",
        "value": "Portraits",
      },
      Object {
        "text": "Practice Guideline",
        "value": "Practice Guideline",
      },
      Object {
        "text": "Pragmatic Clinical Trial",
        "value": "Pragmatic Clinical Trial",
      },
      Object {
        "text": "Published Erratum",
        "value": "Published Erratum",
      },
      Object {
        "text": "Randomized Controlled Trial",
        "value": "Randomized Controlled Trial",
      },
      Object {
        "text": "Review",
        "value": "Review",
      },
      Object {
        "text": "Twin Study",
        "value": "Twin Study",
      },
      Object {
        "text": "Validation Studies",
        "value": "Validation Studies",
      },
      Object {
        "text": "Video-Audio Media",
        "value": "Video-Audio Media",
      },
      Object {
        "text": "Webcasts",
        "value": "Webcasts",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;
